<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.mypage.ui.MyPageFragment">

    <!-- 상단 사용자 정보 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_info_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/port_blue"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/pretendard_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_join_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_date"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_logout_24"
            app:layout_constraintBottom_toBottomOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_level_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPaddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_section">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/user_level_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_broken_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tier_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_bold"
                app:layout_constraintStart_toEndOf="@id/user_level_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/levels_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="등급안내"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                android:fontFamily="@font/pretendard_medium"
                app:layout_constraintBottom_toBottomOf="@+id/user_level_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_level_text" />

            <TextView
                android:id="@+id/user_level_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tier_perks"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                android:fontFamily="@font/pretendard_medium"
                app:layout_constraintStart_toStartOf="@id/user_level_text"
                app:layout_constraintTop_toBottomOf="@id/user_level_text" />

            <ProgressBar
                android:id="@+id/user_level_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:progress="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/user_level_icon"
                app:layout_constraintTop_toBottomOf="@id/user_level_description" />

            <TextView
                android:id="@+id/next_level_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/leftover"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                android:fontFamily="@font/pretendard_medium"
                app:layout_constraintStart_toStartOf="@id/user_level_icon"
                app:layout_constraintTop_toBottomOf="@id/user_level_progress" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_info_section2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/port_blue"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_section" />

    <TextView
        android:id="@+id/order_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="마이페이지"
        android:textSize="20sp"
        android:fontFamily="@font/pretendard_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_level_card" />

    <TextView
        android:id="@+id/customer_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="고객센터"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_history_title" />

    <TextView
        android:id="@+id/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="약관 확인"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_center" />

    <TextView
        android:id="@+id/portStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="포트스토리"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_and_conditions"/>

    <TextView
        android:id="@+id/rePw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="비밀번호 재설정"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/portStory"
        />

    <TextView
        android:id="@+id/logout_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="로그아웃"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rePw" />

</androidx.constraintlayout.widget.ConstraintLayout>
