<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffee_light_white">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="뒤로가기"
        android:src="@drawable/ic_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"
        android:text="장바구니"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/empty_cart_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="port가 비어 있습니다.\n하루를 채울 한 잔을 선택해주세요."
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_view_cart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/receive_method_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:listitem="@layout/list_item_shopping_list" />

    <RadioGroup
        android:id="@+id/receive_method_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/total_price"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/takeout_button"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:text="T-out"
            android:textAlignment="center"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/store_button"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:text="매장"
            android:textAlignment="center"
            android:textSize="14sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/total_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/shopping_count"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/menu_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/port_blue"
        android:fontFamily="@font/pretendard_bold"
        android:text="주문"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/pretendard_bold"
        android:padding="0dp"
        android:text="@string/clear_all"
        android:textSize="16sp"
        android:textColor="@color/port_red"
        app:layout_constraintBottom_toBottomOf="@id/receive_method_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/receive_method_group"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
